--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
 	<meta charset="UTF-8">
 	<link href="index.css" rel="stylesheet">
-	meta(name='viewport' content='width=device-width, initial-scale=1.0')
+	<meta(name='viewport' content='width=device-width, initial-scale=1.0')>
 </head>
 
 <body>
-	<div class="head">
-	</div>
+	<header>
+		<div class="top_bar">
+		</div>
+		<div class="navigation">
+		</div>
+	</header>
 	<div class="body">
 	</div>
-	<div class="foot">
-	</div>
+	<footer>
+	</footer>
 </body>
 
 </html>
