--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="index.css" rel="stylesheet">
-	<meta(name='viewport' content='width=device-width, initial-scale=1.0')>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@500&display=swap" rel="stylesheet">
+	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 </head>
 
 <body>
 	<header>
 		<div class="top_bar">
+			<div class="left">
+				<p class="title">camp_now</p>
+			</div>
+			<div class="right">
+				<div class="search" ></div>
+				<div class="login"></div>
+			</div>
 		</div>
 		<div class="navigation">
 		</div>
@@ -18,5 +28,4 @@
 	<footer>
 	</footer>
 </body>
-
 </html>
